# shrubbery

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
common/: Cargo.toml
common/src/: codec.rs  frame.rs  framed.rs  lib.rs
server/: Cargo.toml  cert.pem  key.pem  keypair.pem  self_signed.pfx  self_signed_modern.pfx
server/src/: doc_manager.rs  lib.rs  main.rs
server/src/db/: doc.rs  mod.rs  user.rs
server/src/proto/: framed_websocket.rs  http_multiplexer.rs  mod.rs  socket_processor.rs
server/src/state/: authorizer.rs
