[package]
name = "shrubbery-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shrub"
path = "src/main.rs"

[dependencies]
bytes = "1.5.0"
color-eyre = "0.6.2"
eyre = "0.6.9"
rmp = "0.8.12"
rmpv = "1.0.1"
serde_json = { version = "1.0.108", features = ["raw_value"] }
structopt = "0.3.26"
tokio = {version = "1.34.0", features = ["full"] }
tracing-subscriber ={version =  "0.3.18", features = ["env-filter"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.192", features = ["derive"] }
websocket-codec = "0.5.2"
tracing = "0.1.40"
futures = "0.3.29"
tokio-native-tls = "0.3.1"
tokio-tungstenite = "0.20.1"
pin-project = "1.1.3"
rocksdb = { version = "0.21.0", features = ["jemalloc"] }
rand = "0.8.5"
ulid = "1.1.0"
shrubbery-common.path = "../common"
colored_json = "4.1.0"
expanduser = "1.2.2"
