[package]
name = "shrubbery-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
full = ["pin-project", "tokio", "tokio-native-tls", "tokio-tungstenite", "tokio-util", "futures", "ulid/default"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
pin-project = { version = "1.1.3", optional = true }
tokio = { version = "1.34.0", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-tungstenite = { version = "0.20.1", optional = true }
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }
eyre = "0.6.9"
serde_json = { version = "1.0.108", features = ["raw_value"] }
bytes = "1.5.0"
futures = { version = "0.3.29", optional = true }
ulid = { version = "1.1.0", default-features = false }
